migrated to Xtend/Xtext 2.5