@@ -23,6 +23,7 @@
 
 	<properties>
 		<maven-resources-plugin.version>2.6</maven-resources-plugin.version>
+		<maven-compiler-plugin-version>3.1</maven-compiler-plugin-version>
 		<maven-antrun-plugin.version>1.7</maven-antrun-plugin.version>
 		<maven-install-plugin.version>2.4</maven-install-plugin.version>
 		<maven-surefire-plugin.version>2.16</maven-surefire-plugin.version>
@@ -34,13 +35,27 @@
 		<maven-pmd-plugin.version>3.0.1</maven-pmd-plugin.version>
 		<build-helper-maven-plugin.version>1.8</build-helper-maven-plugin.version>
 		<eclipse-signing-maven-plugin.version>1.0.5</eclipse-signing-maven-plugin.version>
-		<fornax-oaw-m2-plugin.version>3.4.0</fornax-oaw-m2-plugin.version>
-		<xtend-maven-plugin.version>2.5.0</xtend-maven-plugin.version>
-		<xtend-library.version>2.5.0</xtend-library.version>
+		<exec-maven-plugin-version>1.2.1</exec-maven-plugin-version>
+		<xtend-maven-plugin-version>2.5.0</xtend-maven-plugin-version>
+		<xtend-library-version>2.5.0</xtend-library-version>
+		<xtext-version>2.5.0</xtext-version>
 		<jacoco-maven-plugin.version>0.6.3.201306030806</jacoco-maven-plugin.version>
 		<junit-version>4.11</junit-version>
 		<local-build-platform.version>[3.8,4.3)</local-build-platform.version>
-		<ui.test.vmargs></ui.test.vmargs>
+		<java-compile-version>1.7</java-compile-version>
+		<maven.compiler.source>1.7</maven.compiler.source>
+		<maven.compiler.target>1.7</maven.compiler.target>
+		<project.encoding>UTF-8</project.encoding>
+		<file.encoding>${project.encoding}</file.encoding>
+		<project.build.sourceEncoding>${project.encoding}</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>${project.encoding}</project.reporting.outputEncoding>
+		<memoryInitial>128m</memoryInitial>
+		<memoryMaximum>1024m</memoryMaximum>
+		<memoryArgs>-Xms${memoryInitial} -Xmx${memoryMaximum}
+			-XX:PermSize=256m -XX:MaxPermSize=256m</memoryArgs>
+		<encodingArgs>-Dfile.encoding=${file.encoding}</encodingArgs>
+		<loggingArgs>-Dlog4j.configuration=file:${project.basedir}/../../plugins/de.abg.jreichert.repositorytarget.activeannotations/log4j.xml</loggingArgs>
+		<skip.mwe2>true</skip.mwe2>
 		<coverageAgent></coverageAgent>
 		<it.coverage.argLine></it.coverage.argLine>
 		<RTG-local-targetrepository>file:../../releng/de.abg.jreichert.repositorytarget.repository/target/repository</RTG-local-targetrepository>
@@ -65,17 +80,26 @@
 		</plugins>
 		<pluginManagement>
 			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<version>${maven-compiler-plugin-version}</version>
+					<configuration>
+						<source>>${java-compile-version}</source>
+						<target>>${java-compile-version}</target>
+					</configuration>
+				</plugin>
 				<!-- TYCHO -->
 				<plugin>
 					<groupId>org.eclipse.tycho</groupId>
 					<artifactId>tycho-compiler-plugin</artifactId>
 					<version>${tycho-version}</version>
 					<configuration>
-						<encoding>UTF-8</encoding>
-						<meminitial>128m</meminitial>
-						<maxmem>1024m</maxmem>
-						<source>7.0</source>
-						<target>7.0</target>
+						<encoding>${project.encoding}</encoding>
+						<meminitial>${memoryInitial}</meminitial>
+						<maxmem>${memoryMaximum}</maxmem>
+						<source>${java-compile-version}</source>
+						<target>${java-compile-version}</target>
 						<verbose>true</verbose>
 					</configuration>
 				</plugin>
@@ -87,7 +111,9 @@
 					<configuration>
 						<useUIHarness>false</useUIHarness>
 						<useUIThread>false</useUIThread>
-						<argLine>${ui.test.vmargs}</argLine><!-- different for mac/not mac -->
+						<argLine>${memoryArgs} ${ui.test.vmargs} ${it.coverage.argLine}
+							-Dlog4j.configuration=file:${project.basedir}/log4j.properties</argLine><!-- 
+							different for mac/not mac -->
 					</configuration>
 				</plugin>
 				<plugin>
@@ -101,7 +127,7 @@
 					<artifactId>maven-resources-plugin</artifactId>
 					<version>${maven-resources-plugin.version}</version>
 					<configuration>
-						<encoding>UTF-8</encoding>
+						<encoding>${project.encoding}</encoding>
 					</configuration>
 				</plugin>
 				<plugin>
@@ -156,7 +182,7 @@
 					<version>${maven-checkstyle-plugin.version}</version>
 					<configuration>
 						<excludes>**org/eclipse.**:**/internal/**:**antlr**:**/parseTree**:**Abstract**RuntimeModule**:**SetupGenerated**:**Abstract**Validator**:
-							**GrammarAccess**:**Abstract**UiModule**:**Abstract**ProposalProvider**:**/mm/**:**/shapes/shapes/**:**/styles/styles/**:**Abstract**SemanticSequencer**</excludes>
+							**GrammarAccess**:**Abstract**UiModule**:**Abstract**ProposalProvider**:**Abstract**SemanticSequencer**</excludes>
 					</configuration>
 				</plugin>
 				<plugin>
@@ -215,35 +241,93 @@
 					<version>${eclipse-signing-maven-plugin.version}</version>
 				</plugin>
 				<plugin>
-					<groupId>org.fornax.toolsupport</groupId>
-					<artifactId>fornax-oaw-m2-plugin</artifactId>
-					<version>${fornax-oaw-m2-plugin.version}</version>
-				</plugin>
-				<plugin>
-					<groupId>org.eclipse.xtend</groupId>
-					<artifactId>xtend-maven-plugin</artifactId>
-					<version>${xtend-maven-plugin.version}</version>
+					<groupId>org.codehaus.mojo</groupId>
+					<artifactId>exec-maven-plugin</artifactId>
+					<version>${exec-maven-plugin-version}</version>
 					<executions>
 						<execution>
+							<phase>generate-sources</phase>
 							<goals>
-								<goal>compile</goal>
+								<goal>java</goal>
 							</goals>
 						</execution>
 					</executions>
 					<configuration>
-						<!-- need to prefix by basedir to generate to currently built module -->
-						<outputDirectory>${basedir}/xtend-gen</outputDirectory>
+						<skip>${skip.mwe2}</skip>
+						<includeProjectDependencies>false</includeProjectDependencies>
+						<includePluginDependencies>true</includePluginDependencies>
+						<mainClass>org.eclipse.emf.mwe2.launch.runtime.Mwe2Launcher</mainClass>
+						<arguments>
+							<argument>file://${project.basedir}/${mwe2.relative.path}</argument>
+						</arguments>
 					</configuration>
 					<dependencies>
-						<!-- these dependencies are contributed in Eclipse by the "Xtend Library" 
-							classpath container -->
+						<dependency>
+							<groupId>org.eclipse.xtext</groupId>
+							<artifactId>org.eclipse.xtext.xtext</artifactId>
+							<version>${xtext-version}</version>
+						</dependency>
+						<dependency>
+							<groupId>org.eclipse.xtext</groupId>
+							<artifactId>org.eclipse.xtext.xbase</artifactId>
+							<version>${xtext-version}</version>
+						</dependency>
+					</dependencies>
+				</plugin>
+				<plugin>
+					<groupId>org.eclipse.xtend</groupId>
+					<artifactId>xtend-maven-plugin</artifactId>
+					<version>${xtend-maven-plugin-version}</version>
+					<executions>
+						<execution>
+							<goals>
+								<goal>compile</goal>
+								<goal>xtend-install-debug-info</goal>
+								<goal>testCompile</goal>
+								<goal>xtend-test-install-debug-info</goal>
+							</goals>
+						</execution>
+					</executions>
+					<configuration>
+						<outputDirectory>${project.basedir}/xtend-gen</outputDirectory>
+					</configuration>
+					<dependencies>
 						<dependency>
 							<groupId>org.eclipse.xtend</groupId>
 							<artifactId>org.eclipse.xtend.lib</artifactId>
-							<version>${xtend-library.version}</version>
+							<version>${xtend-library-version}</version>
 							<type>pom</type>
 						</dependency>
 					</dependencies>
+				</plugin>
+				<!-- https://groups.google.com/forum/#!msg/xtend-lang/TCnMhyTAqf8/GFRBRo0GtUsJ -->
+				<plugin>
+					<groupId>org.eclipse.m2e</groupId>
+					<artifactId>lifecycle-mapping</artifactId>
+					<version>1.0.0</version>
+					<configuration>
+						<lifecycleMappingMetadata>
+							<pluginExecutions>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>org.eclipse.xtend</groupId>
+										<artifactId>xtend-maven-plugin</artifactId>
+										<versionRange>[${xtend-library-version},]</versionRange>
+										<goals>
+											<goal>compile</goal>
+											<goal>testCompile</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<execute>
+											<runOnIncremental>true</runOnIncremental>
+											<runOnConfiguration>true</runOnConfiguration>
+										</execute>
+									</action>
+								</pluginExecution>
+							</pluginExecutions>
+						</lifecycleMappingMetadata>
+					</configuration>
 				</plugin>
 			</plugins>
 		</pluginManagement>
@@ -389,7 +473,7 @@
 				</os>
 			</activation>
 			<properties>
-				<ui.test.vmargs>-Xmx512m -XX:MaxPermSize=256m -XstartOnFirstThread</ui.test.vmargs>
+				<ui.test.vmargs>-XstartOnFirstThread</ui.test.vmargs>
 			</properties>
 		</profile>
 		<profile>
@@ -401,7 +485,7 @@
 				</os>
 			</activation>
 			<properties>
-				<ui.test.vmargs>-Xmx512m -XX:MaxPermSize=256m</ui.test.vmargs>
+				<ui.test.vmargs></ui.test.vmargs>
 			</properties>
 		</profile>
 	</profiles>
